# dealwatch

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION.md  Dockerfile  INTEGRATIONS.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY.md  llms-install.md  marketplace.json  pyproject.toml  requirements-dev.txt  requirements.txt  server.json  setup.sh
.claude-plugin/: marketplace.json
.github/: dependabot.yml  pull_request_template.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.app.json
public-skills/: README.md
scripts/: __init__.py  audit_runtime_footprint.py  bootstrap.sh  check_runtime_env.py  clean.py  cleanup_local_rebuildables.py  cleanup_operator_artifacts.py  export_public_builder_data.py  generate_public_assets.py  git_secrets_patterns.txt  install_git_hooks.py  launch_dealwatch_chrome.sh  migrate_dealwatch_chrome_profile.py  migrate_sqlite_to_postgres.py  open_dealwatch_account_pages.py  print_remote_repo_settings_checklist.py  product_smoke.py  quickstart_stack.sh  report_dealwatch_login_state.py  review_recommendation_shadow.py  run_fresh_clone_secret_scan.sh  run_git_secrets_audit.sh  run_recommendation_evaluation_campaign.py  smoke_product.sh  smoke_product_hermetic.sh  test.sh  verify_builder_contract_sync.py  verify_builder_public_boundary.py  verify_ci_runner_contract.py  verify_docs_contract.py  verify_english_boundary.py  verify_feed_surface.py  verify_host_process_safety.py  verify_no_live_legacy_imports.py  verify_package_publish_surface.py  verify_public_demo_interaction.py  verify_public_entrypoints.py  verify_public_surface.py  verify_release_surface_sync.py  verify_remote_github_state.py  (+10 more)
site/: 404.html  builders.html  community.html  compare-preview.html  compare-vs-tracker.html  faq.html  feed.xml  index.html  llms.txt  proof.html  quick-start.html  robots.txt  sitemap.xml  use-cases.html
tests/: test_browser_debug.py  test_browser_login_state.py  test_browser_profile_migration.py  test_docs_truth_paths.py  test_e2e.py  test_frontend_compare_smoke.py  test_i18n_surface_alignment.py  test_launch_dealwatch_chrome.py  test_mcp_server.py  test_open_dealwatch_account_pages.py  test_product_api.py  test_product_service.py  (+11 more)
(+130 files in other folders)
