[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dealwatch"
version = "1.0.1"
description = "DealWatch product backend and worker runtime"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["dealwatch", "mcp", "price-tracking", "grocery", "fastapi", "preact"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "playwright==1.58.0",
  "pydantic~=2.4",
  "pydantic-settings~=2.0",
  "aiosqlite~=0.20.0",
  "PyYAML~=6.0",
  "fastapi~=0.121.0",
  "uvicorn~=0.37.0",
  "sqlalchemy~=2.0.38",
  "alembic~=1.16.0",
  "psycopg[binary]~=3.2.5",
  "httpx~=0.28.1",
  "tenacity~=9.0.0",
  "extruct~=0.18.0",
  "price-parser~=0.5.0",
  "rapidfuzz~=3.12.0",
  "selectolax~=0.3.26",
  "orjson~=3.11.6",
  "opentelemetry-api~=1.31.0",
  "opentelemetry-sdk~=1.31.0",
  "prometheus-client~=0.21.0",
  "apscheduler~=3.10.4",
  "python-multipart~=0.0.20",
  "email-validator~=2.2.0",
  "tzdata~=2024.1",
  "mcp>=1.9.4,<2.0.0",
]

[project.urls]
Homepage = "https://xiaojiou176-open.github.io/dealwatch/"
Repository = "https://github.com/xiaojiou176-open/dealwatch"
Documentation = "https://github.com/xiaojiou176-open/dealwatch/blob/main/docs/integrations/README.md"
Issues = "https://github.com/xiaojiou176-open/dealwatch/issues"
Discussions = "https://github.com/xiaojiou176-open/dealwatch/discussions"
Changelog = "https://github.com/xiaojiou176-open/dealwatch/releases"

[project.scripts]
dealwatch = "dealwatch.cli:main"
dealwatch-mcp = "dealwatch.mcp.server:main"

[dependency-groups]
dev = [
  "build==1.3.0",
  "pytest==8.4.1",
  "pytest-asyncio==0.23.8",
  "pytest-cov==7.1.0",
  "ruff~=0.11.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dealwatch*"]
